--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     "build": "npx tsc",
     "watch": "npx tsc --watch",
+    "lint": "eslint",
+    "lint:fix": "npx eslint --fix .",
     "test": "mocha"
   },
   "keywords": [
@@ -19,10 +21,16 @@
   "author": "Hubert Lipiński <hubertlipinskipl@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
     "@types/node": "^20.14.2",
     "chai": "^5.1.1",
+    "eslint": "^9.5.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.6.0",
     "mocha": "^10.4.0",
-    "typescript": "^5.4.5"
+    "prettier": "3.3.2",
+    "typescript-eslint": "^8.0.0-alpha.10"
   },
   "dependencies": {
     "commander": "^12.1.0"
