--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "watch": "npx tsc --watch",
     "lint": "eslint",
     "lint:fix": "npx eslint --fix .",
-    "test": "mocha"
+    "test": "mocha",
+    "prepare": "husky"
   },
   "keywords": [
     "cli",
@@ -28,11 +29,15 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.6.0",
+    "lint-staged": "^15.2.7",
     "mocha": "^10.4.0",
     "prettier": "3.3.2",
     "typescript-eslint": "^8.0.0-alpha.10"
   },
   "dependencies": {
     "commander": "^12.1.0"
+  },
+  "lint-staged": {
+    ".ts": ["eslint --quiet --fix"]
   }
 }
