--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.6.0",
+    "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "mocha": "^10.4.0",
     "prettier": "3.3.2",
@@ -38,6 +39,8 @@
     "commander": "^12.1.0"
   },
   "lint-staged": {
-    ".ts": ["eslint --quiet --fix"]
+    ".ts": [
+      "eslint --quiet --fix"
+    ]
   }
 }
