--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "description": "Simple implementation of Git filesystem in Node.js",
   "main": "dist/index.js",
   "bin": {
-    "node-git": "./dist/index.js"
+    "node-git": "./build/index.min.js"
   },
   "scripts": {
-    "build": "npx tsc",
-    "watch": "npx tsc --watch",
+    "build": "rollup --config",
+    "watch": "rollup -cw",
     "lint": "eslint",
     "lint:fix": "npx eslint --fix .",
-    "test": "mocha",
     "prepare": "husky"
   },
   "keywords": [
@@ -23,16 +22,18 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/node": "^20.14.2",
-    "chai": "^5.1.1",
     "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.6.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
-    "mocha": "^10.4.0",
     "prettier": "3.3.2",
+    "rollup": "^4.18.0",
     "typescript-eslint": "^8.0.0-alpha.10"
   },
   "dependencies": {
