--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/ini": "^4.1.1",
     "@types/node": "^20.14.2",
     "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.1.0",
@@ -37,7 +38,8 @@
     "typescript-eslint": "^8.0.0-alpha.10"
   },
   "dependencies": {
-    "commander": "^12.1.0"
+    "commander": "^12.1.0",
+    "ini": "^4.1.3"
   },
   "lint-staged": {
     ".ts": [
